# CMakeGLU

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
include/: preprocess.h  symbolic.h
src/: numeric.cu  preprocess.c  symbolic.cpp
